objects/amc__Role__c.object
<CustomObject>
    <fields>
        <fullName>amc__View_Time_Logs_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Project Overview Time Logs Tab</inlineHelpText>
        <label>View Time Logs Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Track_Pad_Add_Action__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Track Pad Add Action Tab</inlineHelpText>
        <label>View Track Pad Add Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Track_Pad_Add_Issue__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies if the Role has the permission to view the Add Issue Tab on the Track Pad</inlineHelpText>
        <label>View Track Pad Add Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Track_Pad_Add_Risk__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies if the Role has the permission to view the Add Risk Tab on the Track Pad</inlineHelpText>
        <label>View Track Pad Add Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Track_Pad_Expense_Logger__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Track Pad Expense Logger Tab</inlineHelpText>
        <label>View Track Pad Expense Logger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Track_Pad_Feed__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Track Pad Feed Tab</inlineHelpText>
        <label>View Track Pad Feed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Track_Pad_Time_Logger__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Track Pad Time Logger Tab</inlineHelpText>
        <label>View Track Pad Time Logger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Track_Pad_Timeline__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Track Pad Timeline Tab</inlineHelpText>
        <label>View Track Pad Timeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Track_Pad__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Track Pad</inlineHelpText>
        <label>View Track Pad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__View_Whiteboard_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Project Overview Whiteboard Tab</inlineHelpText>
        <label>View Whiteboard Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Wednesday__c</fullName>
        <defaultValue>IF(NOT(ISBLANK($Setup.amc__Rates__c.amc__Hours_Per_Day__c)), $Setup.amc__Rates__c.amc__Hours_Per_Day__c, 0)</defaultValue>
        <inlineHelpText>Identifies how many hours the Role is set to work on this day of the week. Updated automatically to match the Active Role Availability record if this feature is being utilised and activated from the Control Pad of the Console</inlineHelpText>
        <label>Wednesday</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Role</label>
    <listViews>
        <fullName>Implementation_Managers</fullName>
        <columns>NAME</columns>
        <columns>amc__Job_Title__c</columns>
        <columns>amc__Manage_Timesheets__c</columns>
        <columns>amc__Timesheet_Approver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>amc__Job_Title__c</field>
            <operation>contains</operation>
            <value>Implementation</value>
        </filters>
        <filters>
            <field>amc__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Implementation Managers</label>
    </listViews>
    <listViews>
        <fullName>Program_Architects</fullName>
        <columns>NAME</columns>
        <columns>amc__Job_Title__c</columns>
        <columns>amc__Manage_Timesheets__c</columns>
        <columns>amc__Timesheet_Approver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>amc__Job_Title__c</field>
            <operation>contains</operation>
            <value>Architect</value>
        </filters>
        <filters>
            <field>amc__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Program Architects</label>
    </listViews>
    <listViews>
        <fullName>amc__All</fullName>
        <columns>NAME</columns>
        <columns>amc__Job_Title__c</columns>
        <columns>amc__Active__c</columns>
        <columns>amc__Hours_Per_Week__c</columns>
        <columns>amc__Master_Team__c</columns>
        <columns>amc__Timesheet_Approver__c</columns>
        <columns>amc__Billable_Target__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>amc__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>amc__Role_Permissions_Console</fullName>
        <columns>NAME</columns>
        <columns>amc__Console_Default_Tab__c</columns>
        <columns>amc__View_Launch_Pad__c</columns>
        <columns>amc__View_Progress_Pad__c</columns>
        <columns>amc__View_Management_Pad__c</columns>
        <columns>amc__View_Control_Pad__c</columns>
        <filterScope>Everything</filterScope>
        <label>Role Permissions - Console</label>
    </listViews>
    <listViews>
        <fullName>amc__Role_Permissions_Project_Overview_Page</fullName>
        <columns>NAME</columns>
        <columns>amc__Project_Overview_Default_Tab__c</columns>
        <columns>amc__View_Insights_Tab__c</columns>
        <columns>amc__View_Overview_Tab__c</columns>
        <columns>amc__View_Action_Pad_Tab__c</columns>
        <columns>amc__View_Time_Logs_Tab__c</columns>
        <columns>amc__View_Expenses_Tab__c</columns>
        <columns>amc__View_Risks_Tab__c</columns>
        <columns>amc__View_Issue_Log_Tab__c</columns>
        <columns>amc__View_Billing_Tab__c</columns>
        <columns>amc__View_Whiteboard_Tab__c</columns>
        <columns>amc__View_Gantt_Chart_Tab__c</columns>
        <columns>amc__View_Rev_Rec_Tab__c</columns>
        <filterScope>Everything</filterScope>
        <label>Role Permissions - Project Overview Page</label>
    </listViews>
    <listViews>
        <fullName>amc__Role_Permissions_Track_Pad</fullName>
        <columns>NAME</columns>
        <columns>amc__Track_Pad_Default_Tab__c</columns>
        <columns>amc__View_Track_Pad__c</columns>
        <columns>amc__View_Track_Pad_Expense_Logger__c</columns>
        <columns>amc__View_Track_Pad_Feed__c</columns>
        <columns>amc__View_Track_Pad_Timeline__c</columns>
        <columns>amc__View_Track_Pad_Time_Logger__c</columns>
        <columns>amc__View_Track_Pad_Add_Action__c</columns>
        <columns>amc__View_Track_Pad_Add_Risk__c</columns>
        <columns>amc__View_Track_Pad_Add_Issue__c</columns>
        <filterScope>Everything</filterScope>
        <label>Role Permissions - Track Pad</label>
    </listViews>
    <nameField>
        <label>Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>